<resources>
    <string name="app_name">SocialMeet</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="new_sign_up_here">New? Sign up here.</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="Full_name">Full name</string>
    <string name="phone">Phone</string>
    <string name="next">Next</string>
    <string name="this_will_help_us_decide_who_and_what_you_see_on_our_app">This will help us decide who and what you see on our app!</string>
    <string name="select_the_categories_you_fit_best_in">Select the categories you fit best in</string>
    <string name="finish">Finish</string>
    <string name="i_like_this">I Like this</string>
    <string name="engineering">Engineering</string>
    <string name="art">Art</string>
    <string name="history">History</string>
    <string name="type_here">Type Here</string>
    <string name="enter_occupation_or_major">Enter occupation or major</string>
    <string name="please_enter_occupation_or_major" />
    <string name="please_type_here" />
    <string name="navigation_drawer_open"> Open navigation drawer</string>
    <string name="navigation_drawer_close"> Close navigation drawer</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="have_an_account_login">Have an Account? Login</string>
    <string name="line1">Line1</string>
    <string name="never_stop_dreaming">Never Stop Dreaming</string>
    <string name="settings">Settings</string>
    <string name="more">More</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="promote">Promote</string>
    <string name="Home">Home</string>
    <string name="Message">Message</string>
    <string name="title_activity_explore_page">ExplorePage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profile">Profile</string>
    <string name="explore">Explore</string>
    <string name="post">Post</string>
    <string name="_1">1</string>
    <string name="description">Description</string>
    <string name="title">title</string>
    <string name="share_your_ideas">Share Your Ideas</string>
    <string name="priority">Priority</string>


</resources>