<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainPostAction">

    <EditText
        android:id="@+id/userTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"/>
    <EditText
        android:id="@+id/userDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/share_your_ideas"
        android:inputType="textMultiLine"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/priority"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/number_picker_priority"
        />

    <Button
        android:id="@+id/postToMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post" />


</LinearLayout>